Implement displaying os.name

--- a/src/main/resources/templates/properties.html
+++ b/src/main/resources/templates/properties.html
@@ -8,7 +8,9 @@
     <h3>Properties:</h3>
     <ul>
         <li>profile: </li>
-        <li>os.name: </li>
+        <li>os.name:
+            <span th:text="${osName}"></span>
+        </li>
         <li>JAVA_HOME:
             <span th:text="${JAVA_HOME}"></span>
         </li>
