Refactor name of JAVA_HOME model attribute

--- a/src/main/resources/templates/properties.html
+++ b/src/main/resources/templates/properties.html
@@ -12,7 +12,7 @@
             <span th:text="${osName}"></span>
         </li>
         <li>JAVA_HOME:
-            <span th:text="${JAVA_HOME}"></span>
+            <span th:text="${javaHome}"></span>
         </li>
         <li>spring.version: </li>
         <li>version: </li>
