Implement displaying of active profile name

--- a/src/main/resources/templates/properties.html
+++ b/src/main/resources/templates/properties.html
@@ -7,7 +7,9 @@
 <body>
     <h3>Properties:</h3>
     <ul>
-        <li>profile: </li>
+        <li>profile:
+            <span th:text="${profile}"></span>
+        </li>
         <li>os.name:
             <span th:text="${osName}"></span>
         </li>
