--- a/src/main/resources/templates/properties.html
+++ b/src/main/resources/templates/properties.html
@@ -19,7 +19,9 @@
         <li>spring.version: </li>
         <li>version: </li>
         <li>basedir: </li>
-        <li>myFilteredProperty: </li>
+        <li>myFilteredProperty:
+            <span th:text="${myFilteredProperty}"></span>
+        </li>
     </ul>
 </body>
 </html>
