Implement displaying of spring.version

--- a/src/main/resources/templates/properties.html
+++ b/src/main/resources/templates/properties.html
@@ -16,7 +16,9 @@
         <li>JAVA_HOME:
             <span th:text="${javaHome}"></span>
         </li>
-        <li>spring.version: </li>
+        <li>spring.version:
+            <span th:text="${springVersion}"></span>
+        </li>
         <li>version: </li>
         <li>basedir: </li>
         <li>myFilteredProperty:
