Implement displaying of version

--- a/src/main/resources/templates/properties.html
+++ b/src/main/resources/templates/properties.html
@@ -19,7 +19,9 @@
         <li>spring.version:
             <span th:text="${springVersion}"></span>
         </li>
-        <li>version: </li>
+        <li>version:
+            <span th:text="${version}"></span>
+        </li>
         <li>basedir: </li>
         <li>myFilteredProperty:
             <span th:text="${myFilteredProperty}"></span>
