Implement displaying od basedir

--- a/src/main/resources/templates/properties.html
+++ b/src/main/resources/templates/properties.html
@@ -22,7 +22,9 @@
         <li>version:
             <span th:text="${version}"></span>
         </li>
-        <li>basedir: </li>
+        <li>basedir:
+            <span th:text="${basedir}"></span>
+        </li>
         <li>myFilteredProperty:
             <span th:text="${myFilteredProperty}"></span>
         </li>
